[package]
name = "kewb"
version = "0.1.0"
edition = "2021"
authors = ["LIOKA Ranraison Fiderana <luckasranarison@gmail.com>"]
license = "MIT"

[dependencies]
rand = "0.8.3"
bincode = { version = "2.0.0-rc", features = ["serde"] }
clap = { version = "4.2.5", features = ["derive"] }
spinners = "4.1.0"
